some minor changes

--- a/assets/scss/utils/_views.scss
+++ b/assets/scss/utils/_views.scss
@@ -12,6 +12,11 @@
       left: 50%;
       right: 50%;
       transform: translate(-50%, -15%);
+
+      &:hover {
+        cursor: none;
+        box-shadow: none;
+      }
     }
   }
 }
